# rust_playground

./: .gitignore  .travis.yml  COPYING  Cargo.toml  Readme.md  build.rs
attic/capnp_test/: Cargo.toml  build.rs
attic/capnp_test/capnp/: game.capnp  scene.capnp
capnp/: d3types.capnp  mainloop.capnp  scene.capnp  test.capnp
capnp_test/capnp/: asset.capnp  engine.capnp
crystal/: Cargo.toml
crystal/src/: ffs.rs  lib.rs  rad.rs  util.rs
render_bits/: Cargo.toml
render_bits/src/: debug_frag.glsl  debug_vert.glsl  lib.rs
src/: capnp_bits.rs  crystal.rs  lib.rs  main.rs  render_bits.rs  script.rs
src/crystal/: ffs.rs  rad.rs
src/render_bits/: frame.rs  math.rs  render_test2.rs  text_console.rs  text_vert.glsl
src/script/: parse.rs  tokenize.rs
