[package]
name = "capnp_test"
version = "0.1.0"
authors = ["sim82 <simberger@gmail.com>"]
build = "build.rs"

[dependencies]
capnp = "0.9"
memmap = "0.7"
custom_error = "1.3"
uuid = "0.7"
vulkano = "0.11.1"
vulkano-shaders = "0.11.1"
winit = "0.18"
vulkano-win = "0.11.1"
cgmath = "0.16.1"
ndarray = "0.12"

[build-dependencies]
capnpc = "0.9"
