[package]
name = "rust_playground"
version = "0.1.0"
authors = ["sim82 <simberger@gmail.com>"]
edition = "2018"

[dependencies]
bincode = "1.0"
cgmath = "0.16.1"
custom_error = "1.3"
image = "0.21"
itertools = "0.8"
ndarray = "0.12"
num-traits = "0.2"
packed_simd = "0.3"
rand = "0.6"
rayon = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
vulkano = "0.11.1"
vulkano-shaders = "0.11.1"
vulkano-win = "0.11.1"
winit = "0.18"