[package]
name = "rust_playground"
version = "0.1.0"
authors = ["sim82 <simberger@gmail.com>"]
edition = "2018"
build = "build.rs"

[features]
capnp_bits = ["capnp", "capnpc"]

[profile.release]
debug = true

[dependencies]
bincode = "1"
capnp = {version = "0.9", optional = true }
cgmath = { version = "0.17", simd = true }
custom_error = "1"
image = "0.21"
itertools = "0.8"
memmap = "0.7"
ndarray = "0.12"
num-traits = "0.2"
packed_simd = "0.3"
rand = "0.6"
rayon = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
uuid = "0.7"
vulkano = "0.11.1"
vulkano-shaders = "0.11.1"
vulkano-win = "0.11.1"
winit = "0.18"
glyph_brush = "0.4"
clap = "2"
log = "0.4"
lazy_static = "1"

[build-dependencies]
capnpc = {version = "0.9", optional = true }