[package]
name = "crystal"
version = "0.1.0"
authors = ["sim82 <simberger@gmail.com>"]
edition = "2018"

[dependencies]
custom_error = "1.3"
cgmath = "0.16.1"
ndarray = "0.12"
num-traits = "0.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
bincode = "1.0"
image = "0.21"
packed_simd = "0.3"
itertools = "0.8"
rayon = "1.0"
