[package]
name = "render_bits"
version = "0.1.0"
authors = ["sim82 <simberger@gmail.com>"]
edition = "2018"

[dependencies]
custom_error = "1.3"
cgmath = "0.16.1"
ndarray = "0.12"
vulkano = "0.11.1"
vulkano-shaders = "0.11.1"
winit = "0.18"
vulkano-win = "0.11.1"
#capnp_test = { path = "../capnp_test" }
crystal = { path = "../crystal" }
num-traits = "0.2"
rand = "0.6"


